# minimal-compression-example

./: Cargo.toml  README.md
tonic-key-value-store/: Cargo.toml
tonic-key-value-store/proto/: key_value_store.proto
tonic-key-value-store/src/: main.rs
tower-compression/: Cargo.toml
tower-compression/src/: compression.rs  decompression.rs  lib.rs
